# karolakvido

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish-ics.yml  tests.yml
src/karolakvido/: __init__.py  __main__.py  cli.py  ical.py  scraper.py
tests/: conftest.py  test_program.py  test_workflow.py
tests/fixtures/: calendar_sample.html  detail_kdy_with_noisy_related_dates.html  detail_litvinov.html  detail_missing_year_in_kdy.html  detail_numeric_date_without_kdy.html  detail_praha.html  detail_without_minutes.html
