[build-system]
requires = ["uv-build>=0.8.15,<0.11.0"]
build-backend = "uv_build"

[project]
name = "karolakvido"
version = "0.1.0"
description = "Export kalendáře Karol a Kvído do iCalendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "click>=8.1.8",
  "ics>=0.8.0.dev0",
  "requests>=2.32.0",
  "tenacity>=9.1.2",
]

[project.scripts]
karolakvido = "karolakvido.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
